--- a/index.html
+++ b/index.html
@@ -222,10 +222,11 @@
             <!-- Hidden Print Header -->
             <div class="print-header hidden">Carrier HVAC System Configuration</div>
 
-            <div class="flex justify-between items-center mb-4 border-b border-slate-300 pb-2">
-                <h2 class="text-xl font-bold text-slate-800">Current System Build</h2>
+            <div
+                class="flex justify-between items-center mb-4 border-b border-slate-300 pb-2 bg-[#0f172a] -mx-6 -mt-6 p-6 rounded-t-xl">
+                <h2 class="text-2xl font-black text-white uppercase tracking-wide">Current System Build</h2>
                 <button onclick="window.print()"
-                    class="text-slate-600 hover:text-slate-900 text-sm font-bold flex items-center gap-1 uppercase tracking-wide">
+                    class="text-slate-300 hover:text-white text-sm font-bold flex items-center gap-1 uppercase tracking-wide">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -897,6 +898,10 @@
             filterEquipment();
         }
 
+        function formatBTU(btu) {
+            return btu ? btu.toLocaleString() + ' BTU' : '';
+        }
+
         function calculateCombinedRating() {
             let totalSeer = 0;
             let totalAfue = 0;
@@ -931,9 +936,32 @@
             const avgSeer = countCooling > 0 ? (totalSeer / countCooling).toFixed(1) : null;
             const avgAfue = countHeating > 0 ? (totalAfue / countHeating).toFixed(1) : null;
 
+            // Build Itemized List
+            let itemizedHtml = '<ul class="space-y-2 mb-3 border-b border-slate-100 pb-2">';
+            systemComponents.forEach(item => {
+                if (!item) return;
+                let ratings = [];
+                const seer = extractEfficiency(item.rating, 'SEER2');
+                const afue = extractEfficiency(item.rating, 'AFUE');
+                const hspf = extractEfficiency(item.rating, 'HSPF');
+
+                if (seer > 0) ratings.push(`<span class="text-bse-blue font-bold">${seer} SEER2</span>`);
+                if (afue > 0) ratings.push(`<span class="text-red-600 font-bold">${afue}% AFUE</span>`);
+                if (hspf > 0) ratings.push(`<span class="text-purple-600 font-bold">${hspf} HSPF</span>`);
+                if (item.btu > 0) ratings.push(`<span class="text-slate-500">${formatBTU(item.btu)}</span>`);
+
+                itemizedHtml += `
+                    <li class="flex justify-between items-start text-xs">
+                        <span class="font-medium text-slate-700 w-1/2 truncate" title="${item.name}">${item.name}</span>
+                        <div class="text-right space-x-1">${ratings.join(' • ')}</div>
+                    </li>
+                `;
+            });
+            itemizedHtml += '</ul>';
+
             let combinedText = '';
             if (avgSeer) {
-                combinedText += `Cooling Avg: <span class="font-bold text-bse-blue">${avgSeer} SEER2</span>`;
+                combinedText += `Cooling Avg: <span class="font-bold text-bse-blue text-lg">${avgSeer} SEER2</span>`;
                 // Update System AHRI
                 const systemAhri = getSystemAhri(systemComponents);
                 const systemAhriContainer = document.getElementById('system-ahri-container');
@@ -947,13 +975,13 @@
                 }
             }
             if (avgSeer && avgAfue) {
-                combinedText += ' • ';
+                combinedText += ' <span class="text-slate-300 mx-2">|</span> ';
             }
             if (avgAfue) {
-                combinedText += `Heating Avg: <span class="font-bold text-red-600">${avgAfue}% Eff.</span>`;
+                combinedText += `Heating Avg: <span class="font-bold text-red-600 text-lg">${avgAfue}% Eff.</span>`;
             }
 
-            return combinedText || '<span class="text-xs text-gray-400 italic">Add major components to calculate.</span>';
+            return itemizedHtml + (combinedText ? `<div class="text-center mt-2">${combinedText}</div>` : '<div class="text-center text-xs text-gray-400 italic">Add major components to calculate performance.</div>');
         }
 
 
