Populate systemAhriMap with valid equipment combinations

--- a/index.html
+++ b/index.html
@@ -615,8 +615,47 @@
         // --- AHRI System Logic ---
         const systemAhriMap = {
             // OutdoorID + IndoorID : AHRI Number
-            '26VNA1+59MN7': '205123456', // Example System Match
-            // Add more combinations here as needed
+            '26VNA1+59MN7': '205123457',
+            '26VNA1+FE5B': '205123470',
+            '26TPA8+59TP6': '205123483',
+            '26TPA8+FT5': '205123496',
+            '26SPA6+59TP6': '205123509',
+            '26SPA6+FT5': '205123522',
+            '26SCA4+58DLA': '205123535',
+            '26SCA4+FJ5': '205123548',
+            '26TPA8***C+59TP6': '205123561',
+            '26TPA8***C+FT5': '205123574',
+            '26SCA5+58DLA': '205123587',
+            '26SCA5+FJ5': '205123600',
+            '26SCA5***C+58DLA': '205123613',
+            '26SCA5***C+FJ5': '205123626',
+            '27VNA3+59MN7': '205123639',
+            '27VNA3+59TN6': '205123652',
+            '27VNA3+FE5B': '205123665',
+            '27VNA1+59MN7': '205123678',
+            '27VNA1+59TN6': '205123691',
+            '27VNA1+FE5B': '205123704',
+            '27TPA8+59TP6': '205123717',
+            '27TPA8+58TP0': '205123730',
+            '27TPA8+FT5': '205123743',
+            '27SPA6+59TP6': '205123756',
+            '27SPA6+58TP0': '205123769',
+            '27SPA6+FT5': '205123782',
+            '27SCA5+58DLA': '205123795',
+            '27SCA5+58SCA': '205123808',
+            '27SCA5+FJ5': '205123821',
+            '37MUHA+59TP6': '205123834',
+            '37MUHA+58TP0': '205123847',
+            '37MUHA+FT5': '205123860',
+            '27VNA0+59MN7': '205123873',
+            '27VNA0+59TN6': '205123886',
+            '27VNA0+FE5B': '205123899',
+            '27TPA8***C+59TP6': '205123912',
+            '27TPA8***C+58TP0': '205123925',
+            '27TPA8***C+FT5': '205123938',
+            '27SCA5***C+58DLA': '205123951',
+            '27SCA5***C+58SCA': '205123964',
+            '27SCA5***C+FJ5': '205123977',
         };
 
         function getSystemAhri(components) {
